# stb-mnt

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: workflows
.github/workflows/: pages.yml
frontend/: default_dependencies.json  dependencies.json  f  graph.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: app.tsx  index.css  utils.ts
frontend/src/components/: context.tsx  graph.tsx  graphRender.tsx
frontend/src/components/controls/: filter.css  filter.tsx  settings.tsx
stb/: __init__.py  __main__.py  __version__.py  config.py  db.py  graph.py  run.py  setup.py  update.py  use.py  util.py
stb/utils/: dependency_parser.py
tests/: conftest.py  test_config.py  test_setup.py
