[tool.poetry]
name = "stb-mnt"
packages = [{ include = "stb" }]
version = "4.2.0"
description = "A universal tool for local microservice management."
readme = "README.md"
authors = ["Stanislav Zmiev <szmiev2000@gmail.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
]

[tool.poetry.scripts]
stb = 'stb:app'

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
typer = { extras = ["all"], version = "^0.6.1" }
pysh = "^3.1.0"
python-dotenv = "^0.21.0"
typing-extensions = "^4.3.0"
platformdirs = "^2.6.2"
requests = "^2.28.2"
tomli = "^2.0.1"
tomlkit = "^0.11.6"
python-gitlab = "^3.13.0"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pyupgrade = "*"
autoflake = "*"
bandit = { version = "*", extras = ["toml"] }
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.html]
skip_covered = true
skip_empty = true

[tool.coverage.report]
omit = []
fail_under = 90
skip_covered = true
skip_empty = true
show_missing = true

[tool.isort]
profile = "black"
multi_line_output = 3
skip_gitignore = true
skip_glob = []
line_length = 120
lines_between_sections = 1

[tool.black]
line-length = 120
target_version = ['py38']
# extend-exclude = 'examples'
